--- a/index.html
+++ b/index.html
@@ -13,22 +13,29 @@
 <body>
     <nav class="navigation max-width-1 m-auto">
         <div class="nav-left">
+            <!-- give some color to icon logo -->
             <span>TechBlog
             </span>
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/">About</a></li>
-                <li><a href="/">Contact</a></li>
+                <li><a href="/contact.html">Contact</a></li>
             </ul>
 
         </div>
         <div class="nav-right">
-            <input class="form-input" type="text" placeholder="Search Article">
-            <button class="btn">Search</button>
+            <form action="/search.html" method="get">
+                <input class="form-input" type="text" name="query" placeholder="Search Article">
+                <button class="btn">Search</button>
+            </form>
         </div>
     </nav>
     <div class="max-width-1 m-auto">
-        <hr>
+        <!-- <hr> -->
+        <hr style="
+    /* font-weight: bolder; */
+    border-top: 2px solid gray;
+    ">
     </div>
     <div class="content max-width-1 m-auto">
 
@@ -47,75 +54,86 @@
         </div>
     </div>
     <div class="max-width-1 m-auto">
-        <hr>
-    </div>
+        <!-- <hr> -->
+        <hr style="
+    /* font-weight: bolder; */
+    border-top: 2px solid gray;
+    ">
 
-    <div class="home-articles max-width-1 m-auto font2">
-        <h2>Feature Articles</h2>
-        <!-- article 1 -->
-        <div class="home-article">
-            <div class="home-article-img">
-                <img src="img/article/pic0.jpg" alt="article 1">
+        <div class="home-articles max-width-1 m-auto font2">
+            <h2>Feature Articles</h2>
+            <!-- article 1 -->
+            <div class="home-article">
+                <div class="home-article-img">
+                    <img src="img/article/pic0.jpg" alt="article 1">
 
+                </div>
+                <div class="home-article-content">
+                    <a href="../blogpost.html">
+                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+                    </a>
+                    <br>
+                    <span>Author Name</span><br>
+                    <span>10 April 2023 | 5 min read</span>
+                </div>
             </div>
-            <div class="home-article-content">
-                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-                <span>Author Name</span><br>
-                <span>10 April 2023 | 5 min read</span>
-                <!-- <span></span> -->
+
+            <!-- article 2 -->
+            <div class="home-article">
+                <div class="home-article-img">
+                    <img src="img/article/pic1.jpg" alt="article 1">
+
+                </div>
+                <div class="home-article-content">
+                    <a href="../blogpost.html">
+                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+                    </a>
+                    <br>
+                    <span>Author Name</span><br>
+                    <span>10 April 2023 | 5 min read</span>
+                </div>
             </div>
+
+            <!-- article 3 -->
+            <div class="home-article">
+                <div class="home-article-img">
+                    <img src="img/article/pic3.jpg" alt="article 1">
+
+                </div>
+                <div class="home-article-content">
+                    <a href="../blogpost.html">
+                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+                    </a>
+                    <br>
+                    <span>Author Name</span><br>
+                    <span>10 April 2023 | 5 min read</span>
+                </div>
+            </div>
+
+            <!-- article 4-->
+            <div class="home-article">
+                <div class="home-article-img">
+                    <img src="img/article/pic4.jpg" alt="article 1">
+
+                </div>
+                <div class="home-article-content">
+                    <a href="../blogpost.html">
+                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+                    </a>
+                    <br>
+                    <span>Author Name</span><br>
+                    <span>10 April 2023 | 5 min read</span>
+                </div>
+            </div>
+
+
         </div>
 
-        <!-- article 2 -->
-        <div class="home-article">
-            <div class="home-article-img">
-                <img src="img/article/pic1.jpg" alt="article 1">
-
-            </div>
-            <div class="home-article-content">
-                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-                <span>Author Name</span><br>
-                <span>10 April 2023 | 5 min read</span>
-                <!-- <span></span> -->
-            </div>
+        <!-- FOOTER -->
+        <div class="footer max-width-0 m-auto">
+            <!-- <a href="https://www.vecteezy.com/free-vector/school">School Vectors by Vecteezy</a>  -->
+            Copyright &copy; TechBlog by সজল সরকার
         </div>
-
-        <!-- article 3 -->
-        <div class="home-article">
-            <div class="home-article-img">
-                <img src="img/article/pic3.jpg" alt="article 1">
-
-            </div>
-            <div class="home-article-content">
-                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-                <span>Author Name</span><br>
-                <span>10 April 2023 | 5 min read</span>
-                <!-- <span></span> -->
-            </div>
-        </div>
-
-        <!-- article 4-->
-        <div class="home-article">
-            <div class="home-article-img">
-                <img src="img/article/pic4.jpg" alt="article 1">
-
-            </div>
-            <div class="home-article-content">
-                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-                <span>Author Name</span><br>
-                <span>10 April 2023 | 5 min read</span>
-                <!-- <span></span> -->
-            </div>
-        </div>
-
-
-    </div>
-
-    <!-- FOOTER -->
-    <div class="footer  m-auto">
-        <!-- <a href="https://www.vecteezy.com/free-vector/school">School Vectors by Vecteezy</a>  -->
-        Copyright &copy; TechBlog by সজল সরকার
-    </div>
 </body>
 
 </html>
