Added contact frontend page

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechBlog - A Techy Platform</title>
+    <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/utils.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -19,7 +20,7 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/">About</a></li>
-                <li><a href="/contact.html">Contact</a></li>
+                <!-- <li><a href="/contact.html">Contact</a></li> -->
             </ul>
 
         </div>
@@ -38,71 +39,40 @@
     ">
     </div>
 
-    <div class="home-articles max-width-1 m-auto font2">
-        <h2>Matched Articles for Django (0.03s)</h2>
-        <!-- article 1 -->
-        <div class="home-article">
-            <div class="home-article-img">
-                <img src="img/article/pic0.jpg" alt="article 1">
+    <div class="contact-content max-width-1 m-auto font2 ">
 
+        <div class="max-width-1 m-auto font2">
+            <h2>Fell free to contact admin panel</h2>
+            <div class="contact-form">
+                <div class="form-box">
+                    <input type="text" placeholder="Enter Your Name">
+                </div>
             </div>
-            <div class="home-article-content">
-                <a href="../blogpost.html">
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-                </a>
-                <br>
-                <span>Author Name</span><br>
-                <span>10 April 2023 | 5 min read</span>
+            <div class="contact-form">
+                <div class="form-box">
+                    <input type="text" placeholder="Enter Your Phone Number">
+                </div>
             </div>
+            <div class="contact-form">
+                <div class="form-box">
+                    <input type="text" placeholder="Enter Your Email">
+                </div>
+            </div>
+            <div class="contact-form">
+                <div class="form-box">
+                   <textarea name="" id="" placeholder="Enter your message here" cols="30" rows="10"></textarea>
+                </div>
+            </div>
+
+            <div class="contact-form">
+                <div class="form-box">
+                   <button class="btn">Submit</button>
+                </div>
+            </div>
+
         </div>
 
-        <!-- article 2 -->
-        <div class="home-article">
-            <div class="home-article-img">
-                <img src="img/article/pic1.jpg" alt="article 1">
 
-            </div>
-            <div class="home-article-content">
-                <a href="../blogpost.html">
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-                </a>
-                <br>
-                <span>Author Name</span><br>
-                <span>10 April 2023 | 5 min read</span>
-            </div>
-        </div>
-
-        <!-- article 3 -->
-        <div class="home-article">
-            <div class="home-article-img">
-                <img src="img/article/pic3.jpg" alt="article 1">
-
-            </div>
-            <div class="home-article-content">
-                <a href="../blogpost.html">
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-                </a>
-                <br>
-                <span>Author Name</span><br>
-                <span>10 April 2023 | 5 min read</span>
-            </div>
-        </div>
-
-        <!-- article 4-->
-        <div class="home-article">
-            <div class="home-article-img">
-                <img src="img/article/pic4.jpg" alt="article 1">
-
-            </div>
-            <div class="home-article-content">
-                <a href="../blogpost.html">
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-                </a>
-                <br>
-                <span>Author Name</span><br>
-                <span>10 April 2023 | 5 min read</span>
-            </div>
-        </div>
 
 
     </div>
