--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechBlog - A Techy Platform</title>
     <link rel="stylesheet" href="css/utils.css">
+    <link rel="stylesheet" href="css/style.css">
     
 </head>
 
