All Responsiveness added

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/utils.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/blogpost.css">
+    <link rel="stylesheet" href="css/mobile.css">
 
 </head>
 
