--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/utils.css">
     <link rel="stylesheet" href="css/style.css">
+    
+    <!-- <link rel="stylesheet" href="css/mobile1.css"> -->
 </head>
 
 <body>
@@ -42,7 +44,7 @@
     <div class="contact-content max-width-1 m-auto font2 ">
 
         <div class="max-width-1 m-auto font2">
-            <h2>Fell free to contact admin panel</h2>
+            <h2 style="margin-bottom: 6px;">Fell free to contact admin panel</h2>
             <div class="contact-form">
                 <div class="form-box">
                     <input type="text" placeholder="Enter Your Name">
