--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/utils.css">
     <link rel="stylesheet" href="css/style.css">
     
+    <link rel="stylesheet" href="css/mobile.css">
+    
 </head>
 
 <body>
@@ -19,7 +21,7 @@
             </span>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/">About</a></li>
+                <li><a href="/about.html">About</a></li>
                 <li><a href="/contact.html">Contact</a></li>
             </ul>
 
