Added typed.js feature in homepage

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>TechBlog - A Techy Platform</title>
     <link rel="stylesheet" href="css/utils.css">
     <link rel="stylesheet" href="css/style.css">
-    
+
     <link rel="stylesheet" href="css/mobile.css">
-    
+
 </head>
 
 <body>
@@ -40,11 +40,12 @@
     border-top: 2px solid gray;
     ">
     </div>
+
     <div class="content max-width-1 m-auto">
 
         <div class="content-left">
             <!-- <h1>Alley for Science Articles</h1> -->
-            <h2>Alley for Science Articles</h2>
+            <h2> <span class="auto-type"></span> </h2>
             <!-- <p>TechBlog is a website where you can find science articles & which lets you sub,it an article which upon approval will be displayed on our website and you can get a good amount of reach from here</p> -->
             <p>TechBlog is a website where you can find science articles </p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam maxime debitis vero minus molestias
@@ -137,6 +138,16 @@
             <!-- <a href="https://www.vecteezy.com/free-vector/school">School Vectors by Vecteezy</a>  -->
             Copyright &copy; TechBlog by সজল সরকার
         </div>
+        <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
+        <script>
+            var typed = new Typed('.auto-type', {
+                strings: ["Alley for Science Articles ....."],
+                typeSpeed: 50,
+                backSpeed: 50,
+                loop: true,
+                loopCOunt: Infinity
+            });
+        </script>
 </body>
 
 </html>
