--- a/search.html
+++ b/search.html
@@ -8,6 +8,8 @@
     <title>TechBlog - A Techy Platform</title>
     <link rel="stylesheet" href="css/utils.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mobile.css">
+    <link rel="stylesheet" href="css/mobile 1.css">
 </head>
 
 <body>
