corrected about page design

--- a/about.html
+++ b/about.html
@@ -55,11 +55,14 @@
         <div class="content-right">
 
             <!-- <img src="img/article/civilization.jpg" alt="TechBlog"> -->
-            <img src="img/devAuth.jpg" alt="Developer">
+            <img src="img/devAuth.jpg" style="border: 2px solid black;
+            border-radius: 245px;
+            height: 200px;
+            margin: 10px;" alt="Developer">
         </div>
     </div>
         <!-- FOOTER -->
-        <div class="footer max-width-0 m-auto">
+        <div class="footer max-width-0 m-auto" >
             <!-- <a href="https://www.vecteezy.com/free-vector/school">School Vectors by Vecteezy</a>  -->
             Copyright &copy; TechBlog by সজল সরকার
         </div>
